# openwork-python-deepagent

./: .gitignore  CLAUDE.md  CODEX.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.devcontainer/: Dockerfile  (+3 more)
server/: .env.daytona.local.example  .env.example  config.example.yaml  config.yaml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_extend_checkpoint_columns.py  0003_add_skills_tables.py  0004_add_mcp_tables.py
server/app/: agent_runtime.py  agent_tools.py  analysis_env.py  auth.py  builtin_skill_loader.py  checkpointer_mysql.py  config.py  crypto.py  daytona_backend.py  db.py  deep_agent_runtime.py  deps.py  main.py  mcp_service.py  model_catalog.py  models.py  schemas.py  skill_materialization_worker.py  skills.py  skills_service.py  system_prompt.py  workspace_paths.py
server/app/api/: admin.py  agent.py  auth.py  mcps.py  models.py  skills.py  thread_skills.py  threads.py  workspace.py
server/app/sandbox/: __init__.py  local_sandbox.py  nsjail_sandbox.py  types.py
server/scripts/: audit_orphan_sandboxes.py  create_daytona_snapshot.py  daytona_local_down.sh  daytona_local_up.sh  setup_vm.sh  sync_builtin_skills.py
server/tests/: test_agent_tools.py  test_analysis_env.py  test_api_agent_stream.py  test_api_mcps_test_connect.py  test_api_mcps_update.py  test_config_env.py  test_daytona_backend_snapshot.py  test_deep_agent_runtime_mcp.py  test_local_sandbox.py  test_mcp_service.py  test_model_selection.py  test_sandbox_factory.py  test_user_level_sync.py  test_workspace_paths.py
(+55 files in other folders)
