[project]
name = "openwork-server"
version = "0.1.0"
description = "FastAPI backend for openwork"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pymysql>=1.1",
  "pydantic>=2.6",
  "email-validator>=2.0",
  "pyyaml>=6.0",
  "passlib>=1.7",
  "python-jose>=3.3",
  "httpx>=0.27",
  "watchfiles>=0.21",
  "cryptography>=42.0",
  "deepagents>=0.4.3",
  "langchain>=0.2",
  "langchain-openai>=0.2",
  "langchain-deepseek>=1.0.1",
  "langchain-daytona>=0.0.3",
  "langgraph>=0.2",
  "langgraph-checkpoint>=0.0.12"
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
